# hugo-post-checklist

./: .gitignore  Cargo.toml  build.rs
scripts/: generate_font.py  generate_icon.py
src/: chars.rs  main.rs  text.rs
