[package]
name = "hugo-post-manifesto"
version = "0.1.0"
edition = "2021"

# 设置 Windows 子系统为 "windows"，这样程序就会编译为 GUI 程序
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
eframe = "0.26.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console"
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3